--- a/Crunchers/Views/Shared/_Layout.cshtml
+++ b/Crunchers/Views/Shared/_Layout.cshtml
@@ -14,7 +14,11 @@
 
 
 </head>
-
+@*найти способ заменить цвет текста*@
+@*<style>
+.navbar-fixed-top{
+background-color: rgb(255,193,32) !important;
+</style>*@
 
 <body>
 
@@ -26,7 +30,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("Имя приложения", "Index", "Home", new {area = ""}, new {@class = "navbar-brand"})
+            @Html.ActionLink("Crunchers", "Index", "Home", new {area = ""}, new {@class = "navbar-brand"})
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
