--- a/Crunchers/Views/Manage/Index.cshtml
+++ b/Crunchers/Views/Manage/Index.cshtml
@@ -8,7 +8,7 @@
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
     <h4>Изменение параметров учетной записи</h4>
-    <hr />
+    <hr/>
     <dl class="dl-horizontal">
         <dt>Пароль:</dt>
         <dd>
@@ -28,6 +28,20 @@
             @Model.Logins.Count [
             @Html.ActionLink("Управление", "ManageLogins") ]
         </dd>
+        <dt>Телефон:</dt>
+        <dd>
+            @if (Model.PhoneNumber != null)
+            {
+                @Model.PhoneNumber 
+                @Html.ActionLink("Удалить телефон", "RemovePhoneNumber") 
+            }
+            else
+            {
+                @Html.ActionLink("Добавить телефон", "AddPhoneNumber") 
+            }
+            
+        </dd>
+
         @*
             Номера телефонов можно использовать в качестве второго проверочного фактора для системы двухфакторной проверки подлинности.
              
@@ -56,13 +70,13 @@
                 }
             </dd>
         *@
-        <dt>Двухфакторная проверка подлинности:</dt>
+        @*<dt>Двухфакторная проверка подлинности:</dt>
         <dd>
             <p>
                 Поставщики двухфакторной проверки подлинности не настроены. В <a href="https://go.microsoft.com/fwlink/?LinkId=403804">этой статье</a>
                 можно узнать, как настроить двухфакторную проверку подлинности для этого приложения ASP.NET.
             </p>
-            @*@if (Model.TwoFactor)
+            @#1#if (Model.TwoFactor)
                 {
                     using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                     {
@@ -81,7 +95,7 @@
                         <input type="submit" value="Включить" class="btn btn-link" />
                         </text>
                     }
-                }*@
-        </dd>
+                }#1#
+        </dd>*@
     </dl>
 </div>
