--- a/Crunchers/Views/Shared/_LoginPartial.cshtml
+++ b/Crunchers/Views/Shared/_LoginPartial.cshtml
@@ -1,14 +1,7 @@
 ﻿@using System.Web.Script.Serialization
 @using Microsoft.AspNet.Identity
 
-@if (User.IsInRole("admin"))
-{
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Управление магазином", "ManageShop", "Admin",  null,  new {id = "loginLink"})
-        </li>
-    </ul>
-}
+
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new {id = "logoutForm", @class = "navbar-right"}))
@@ -18,11 +11,17 @@
         <ul class="nav navbar-nav navbar-right">
 
             <li>
-                @Html.ActionLink("Здравствуйте " + User.Identity.Name + "!", "Index", "Manage", routeValues: null, htmlAttributes: new {title = "Manage"})
+                @Html.ActionLink("Личный кабинет", "Index", "Manage", routeValues: null, htmlAttributes: new {title = "Manage"})
             </li>
             <li>
                 <a href="javascript:document.getElementById('logoutForm').submit()">Выйти</a>
             </li>
+            @if (User.IsInRole("admin"))
+            {
+                <li>
+                    @Html.ActionLink("Управление магазином", "ManageShop", "Admin", null, new {id = "loginLink"})
+                </li>
+            }
         </ul>
     }
 }
