--- a/Crunchers/Views/Account/Login.cshtml
+++ b/Crunchers/Views/Account/Login.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Выполнить вход";
 }
 
-<style>
+@*<style>
   input:invalid {
     border-color: rgba(255, 3, 0, 0.27); /* Красный цвет фона */
   }
@@ -30,7 +30,7 @@
   .btn-primary:not(:disabled):not(.disabled):active:focus {
     box-shadow: 0 0 0 .2rem orange !important;
   }
-</style>
+</style>*@
 
 <main class="page login-page">
     <section class="clean-block clean-form dark">
