--- a/Crunchers/Views/Account/Register.cshtml
+++ b/Crunchers/Views/Account/Register.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Регистрация";
 }
-<style>
+@*<style>
   input:invalid {
     border-color: rgba(255, 3, 0, 0.27); /* Красный цвет фона */
   }
@@ -25,7 +25,7 @@
   .btn-primary:not(:disabled):not(.disabled):active:focus{
     box-shadow: 0 0 0 .2rem orange !important;
   }
-</style>
+</style>*@
 
 <main class="page registration-page">
     <section class="clean-block clean-form dark">
