--- a/Crunchers/Views/Admin/ManageShop.cshtml
+++ b/Crunchers/Views/Admin/ManageShop.cshtml
@@ -1,5 +1,7 @@
 ﻿
-
-<ul>
-    <text>hi, admin</text>
-</ul>
+<h1>Меню администратора</h1>
+<ul style="list-style-type:disc;">
+    <li><a href="/addcategory">Добавить категорию</a></li>
+    <li>Tea</li>
+    <li>Milk</li>
+</ul> 
