--- a/Crunchers/Views/Admin/ManageShop.cshtml
+++ b/Crunchers/Views/Admin/ManageShop.cshtml
@@ -1,7 +1,7 @@
 ﻿
 <h1>Меню администратора</h1>
 <ul style="list-style-type:disc;">
-    <li><a href="/addcategory">Добавить категорию</a></li>
+    <li>@Html.ActionLink("Управление заказами","ManageOrders")</li>
     <li>Tea</li>
     <li>Milk</li>
 </ul> 
