--- a/Crunchers/Views/Admin/ManageShop.cshtml
+++ b/Crunchers/Views/Admin/ManageShop.cshtml
@@ -2,6 +2,6 @@
 <h1>Меню администратора</h1>
 <ul style="list-style-type:disc;">
     <li>@Html.ActionLink("Управление заказами","ManageOrders")</li>
-    <li>Tea</li>
+    <li>@Html.ActionLink("Управление категориями","ManageCategories")</li>
     <li>Milk</li>
 </ul> 
