--- a/Crunchers/Views/Admin/ManageCategories.cshtml
+++ b/Crunchers/Views/Admin/ManageCategories.cshtml
@@ -1,56 +1,69 @@
 ﻿@model IEnumerable<Crunchers.Models.CategoryModel>
+<div id="LoadingImage" style="display:none;background-color: rgb(255, 255, 255); opacity: 0.7; width: 100%; height: 100%; position: absolute; top: 0px; left: 0px; z-index: 99999;">
+  <img style="display: block;margin-left: auto;margin-right: auto" src="https://igc-market.ru/images/loading.gif" />
+</div>
 <script>
 function AddCategory() {
+    $("#LoadingImage").show();
     $.ajax({
         type: "POST",
         url: '@Url.RouteUrl(new {controller = "Admin", action = "AddCategory"})?categoryName='+document.getElementById('categoryNameInput').value,
         data: { },
         dataType: 'json',
+        timeout: 15000,
         success: function (correct) {
+            $("#LoadingImage").hide();
             alert('Категория успешно добавлена');
             location.reload();  
             
+            
         },
         error: function(inc) {
+            $("#LoadingImage").hide();
             alert('Произошла ошибка');
             location.reload(); 
+            
             
         }
     });
 }
 function UpdateCategory(categoryId) {
+     $("#LoadingImage").show();
   $.ajax({
           type: "POST",
           url: '@Url.RouteUrl(new {controller = "Admin", action = "ChangeCategory"})?value='+document.getElementById(categoryId).value.toString()+'&row=CategoryName&categoryId='+categoryId,
           data: { },
           dataType: 'json',
+          timeout: 15000,
           success: function (correct) {
+              $("#LoadingImage").hide();
               alert('Категория успешно обновлена');
               location.reload();  
-              
           },
           error: function(inc) {
+              $("#LoadingImage").hide();
               alert('Произошла ошибка');
-              location.reload(); 
-              
+              location.reload();
           }
       });
 }
 function DeleteCategory(categoryId) {
+    $("#LoadingImage").show();
    $.ajax({
             type: "POST",
             url: '@Url.RouteUrl(new {controller = "Admin", action = "DeleteCategory"})?categoryId='+categoryId,
             data: { },
             dataType: 'json',
+            timeout: 15000,
             success: function (correct) {
+                $("#LoadingImage").hide();
                 alert('Категория успешно удалена');
-                location.reload();  
-                
+                location.reload();     
             },
             error: function(inc) {
+                $("#LoadingImage").hide();
                 alert('Произошла ошибка');
                 location.reload(); 
-                
             }
         });
 }
