--- a/Crunchers/Views/Admin/ManageShop.cshtml
+++ b/Crunchers/Views/Admin/ManageShop.cshtml
@@ -3,5 +3,6 @@
 <ul style="list-style-type:disc;">
     <li>@Html.ActionLink("Управление заказами","ManageOrders")</li>
     <li>@Html.ActionLink("Управление категориями","ManageCategories")</li>
-    <li>Milk</li>
+    <li>@Html.ActionLink("Управление товарами","ManageAllProducts")</li>
+    <li>@Html.ActionLink("Управление характеристиками","ManageAllCharacteristics")</li>
 </ul> 
