--- a/Crunchers/Views/Admin/ManageAllProducts.cshtml
+++ b/Crunchers/Views/Admin/ManageAllProducts.cshtml
@@ -36,62 +36,32 @@
             });
     }
     function DeleteProduct(productId) {
-        $("#LoadingImage").show();
-       $.ajax({
-              type: "POST",
-              url: '@Url.RouteUrl(new {controller = "Admin", action = "DeleteProduct"})?productId='+productId,
-              data: { },
-              dataType: 'json',
-              timeout:15000,
-              success: function (correct) {
-                  $("#LoadingImage").hide();
-                  alert('Товар успешно удален');
-                  location.reload();    
-              },
-              error: function(inc) {
-                  $("#LoadingImage").hide();
-                  alert('Произошла ошибка');
-                  location.reload();   
-              }
-          });
-    }
-</script>
-
-<form>
-    <form>
-        <input id="productImageInput" placeholder="Вставьте ссылку на изображение"/>
-        <input id="productNameInput" placeholder="Введите название товара"/>
-        <input id="productPriceInput" placeholder="Введите цену товара"/>
-    </form>
-    <br/>
-    <div id="newCharacteristics">
-        @foreach (var characteristic in Model.Characteristics)
-        {
-            <label>@characteristic.CharacteristicName:</label>
-            if (characteristic.CharacteristicType == "Строковое значение")
-            {
-                <input id="Name=@characteristic.CharacteristicId" placeholder="Введите строковое значение для характеристики"/>
-            }
-            else
-            {
-                <input id="Name=@characteristic.CharacteristicId" placeholder="Введите числовое значение для характеристики"/>
-                if (characteristic.Unit != null || characteristic.Unit != "")
-                {
-                    <text>(в @(characteristic.Unit))(0 в случае отсутствия)</text>
-                }
-            }
-            <br/>
+            $("#LoadingImage").show();
+           $.ajax({
+                  type: "POST",
+                  url: '@Url.RouteUrl(new {controller = "Admin", action = "DeleteProduct"})?productId='+productId,
+                  data: { },
+                  dataType: 'json',
+                  timeout:15000,
+                  success: function (correct) {
+                      $("#LoadingImage").hide();
+                      alert('Товар успешно удален');
+                      location.reload();    
+                  },
+                  error: function(inc) {
+                      $("#LoadingImage").hide();
+                      alert('Произошла ошибка');
+                      location.reload();   
+                  }
+              });
         }
-    </div>
-    <a onclick=" AddProduct()">Add Product</a>
-</form>
-<hr/>
+</script>
 @{
     var productGroup = Model.Products.GroupBy(x => x.ProductId);
     foreach (var product in productGroup)
     {
         <text>Product Id = @product.Key, Product Name = @product.Select(x => x.ProductName).ToList().First()</text>
-        <a href="/Admin/ManageProduct?productId=@product.Key&categoryId=" onclick="this.href=this.href+new URLSearchParams(window.location.search).get('categoryId')">Открыть информацию о продукте</a>
+        <a href="/Admin/ManageProduct?productId=@product.Key&categoryId=" onclick="this.href=this.href+@product.Select(x=>x.CategoryId).FirstOrDefault()">Открыть информацию о продукте</a>
         <a onclick="DeleteProduct(@(product.Key))">Удалить товар</a>
         <br/>
         <br/>
