--- a/Crunchers/Views/Admin/ManageShop.cshtml
+++ b/Crunchers/Views/Admin/ManageShop.cshtml
@@ -5,4 +5,5 @@
     <li>@Html.ActionLink("Управление категориями","ManageCategories")</li>
     <li>@Html.ActionLink("Управление товарами","ManageAllProducts")</li>
     <li>@Html.ActionLink("Управление характеристиками","ManageAllCharacteristics")</li>
+    <li>@Html.ActionLink("Управление городами","ManageCities")</li>
 </ul> 
