--- a/Arshinov.WebApp/Views/Search/Index.cshtml
+++ b/Arshinov.WebApp/Views/Search/Index.cshtml
@@ -1,7 +1,3 @@
-﻿﻿@model Arshinov.WebApp.Controllers.A
-
-
-    @{
-        <h2>@Model.text;</h2>
-        
-    }
+﻿@{
+    <h2>Home Index Page</h2>
+}
