--- a/Crunchers/Views/Admin/ManageProduct.cshtml
+++ b/Crunchers/Views/Admin/ManageProduct.cshtml
@@ -83,5 +83,5 @@
             }
         }
     </div>
-    <a onclick="ChangeProduct()">Change Product</a>
+    <a onclick="ChangeProduct()">Изменить товар</a>
 }
