--- a/Crunchers/Views/Admin/ManageCategories.cshtml
+++ b/Crunchers/Views/Admin/ManageCategories.cshtml
@@ -77,7 +77,7 @@ function DeleteCategory(categoryId) {
 </script>
 <form>
     <input id="categoryNameInput" placeholder="Введите название категории" minlength="3" required/>
-    <a onclick="AddCategory()">Добавить характеристику</a>
+    <a onclick="AddCategory()">Добавить категорию</a>
     
 </form>
 <hr/>
