--- a/Crunchers/Views/Home/Index.cshtml
+++ b/Crunchers/Views/Home/Index.cshtml
@@ -17,6 +17,7 @@
             for enjoyable, agile development.
         </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="@Url.RouteUrl(new {controller = "Catalog", action = "Index"})">Catalog &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Get more libraries</h2>
