--- a/Crunchers/Views/Admin/ManageAllProducts.cshtml
+++ b/Crunchers/Views/Admin/ManageAllProducts.cshtml
@@ -61,7 +61,8 @@
     foreach (var product in productGroup)
     {
         <text>Product Id = @product.Key, Product Name = @product.Select(x => x.ProductName).ToList().First()</text> <text> / </text>
-        <a href="/Admin/ManageProduct?productId=@product.Key&categoryId=" onclick="this.href=this.href+@product.Select(x=>x.CategoryId).FirstOrDefault()">Открыть информацию о продукте</a> <text> / </text>
+                                                                                                                            
+        <a href="/Admin/ManageProduct?productId=@product.Key&categoryId=@product.Select(x=>x.CategoryId).FirstOrDefault()">Открыть информацию о продукте</a> <text> / </text>
         <a onclick="DeleteProduct(@(product.Key))">Удалить товар</a>
         <br/>
         <br/>
