--- a/Crunchers/Views/Catalog/CategoryProducts.cshtml
+++ b/Crunchers/Views/Catalog/CategoryProducts.cshtml
@@ -1,1 +1,59 @@
-﻿
+﻿@model Crunchers.Controllers.CatalogController.CatalogProductsResponse
+<script>
+let urlParams = new URLSearchParams(window.location.search);
+function UnselectFilter(filterId) {
+  location.href=location.href.replace('&filterValues='+urlParams.getAll('filterValues').filter(word=>word.split(':')[0]==filterId)[0],"") ;
+}
+</script>>
+<h1>Каталог</h1>
+<form>
+    @foreach (var filterGroup in Model.Filters)
+    {
+        @filterGroup.Key
+        <br/>
+        foreach (var filter in filterGroup)
+        {
+            if (filter.IsEnabled)
+            {
+                <a class="btn btn-default" onclick="UnselectFilter(@(filter.FilterId))">x @(filter.FilterShowValue)</a>
+            }
+            else
+            {
+                if (filter.isRanged)
+                {
+                    <a class="btn btn-default" onclick="window.location.href=window.location.href+'&filterValues=@(filter.FilterId)'">@filter.FilterShowValue</a>
+                }
+                else
+                {
+                    <a class="btn btn-default" onclick="window.location.href=window.location.href+'&filterValues=@(filter.FilterId):@(filter.FilterShowValue)'">@filter.FilterShowValue</a>
+                }
+            }
+        }
+        <hr/>
+    }
+</form>
+
+<form>
+    @{
+        var productGroup = Model.Products.GroupBy(x => x.ProductId);
+
+        foreach (var product in productGroup)
+        {
+            var first = product.Select(x => x).First();
+            <img src="@first.ImageLink" alt="Изображение отсутствует " width="100" height="100"/>
+            <text>@first.ProductName</text>
+            <text>@first.ProductPrice руб.</text>
+            {
+                if (first.RatingsAmount == 0)
+                {
+                    <text>Рейтинг: 0 (нет оценок)</text>
+                }
+                else
+                {
+                    <text>Рейтинг: @((double)first.RatingSum/first.RatingsAmount) (@first.RatingsAmount оценок)</text>
+                }
+            }
+            <br/>
+        }
+    }
+</form>
