--- a/Crunchers/Views/Shared/_Layout.cshtml
+++ b/Crunchers/Views/Shared/_Layout.cshtml
@@ -7,10 +7,12 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/Scripts/jquery-3.3.1.js")
+    
 
 
 </head>
@@ -22,6 +24,24 @@ background-color: rgb(255,193,32) !important;
 
 <body>
 
+@*<script src="//js.maxmind.com/js/apis/geoip2/v2.1/geoip2.js" type="text/javascript"></script>
+<script>
+let onSuccess = function(location){
+  alert(
+      location.city.names.ru
+  );
+};
+
+let onError = function(error){
+  alert(
+      "Error:\n\n"
+      + JSON.stringify(error, undefined, 4)
+  );
+};
+
+geoip2.city(onSuccess, onError);
+
+</script>*@
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -49,6 +69,7 @@ background-color: rgb(255,193,32) !important;
     </div>
 </div>
 <div class="container body-content">
+
     @RenderBody()
     <hr/>
     <footer>
@@ -58,6 +79,7 @@ background-color: rgb(255,193,32) !important;
 
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/bootstrap")
+@Scripts.Render("~/Scripts/jquery-ui.js")
 @RenderSection("scripts", required: false)
 </body>
 </html>
