--- a/Crunchers/Views/Catalog/CategoryProducts.cshtml
+++ b/Crunchers/Views/Catalog/CategoryProducts.cshtml
@@ -72,7 +72,7 @@ function SubmitSorting() {
     } 
 }
 </script>
-<h1>Каталог</h1>
+<h1><a href="/Catalog" style="text-decoration: none !important; color: black !important;" >←Каталог</a></h1>
 <form>
     <p>
         <label for="amount">Цена:</label>
