--- a/Crunchers/Views/Shared/_LoginPartial.cshtml
+++ b/Crunchers/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,27 @@
 ﻿@using System.Web.Script.Serialization
+@using Crunchers.Models
 @using Microsoft.AspNet.Identity
-
+<script src="//js.maxmind.com/js/apis/geoip2/v2.1/geoip2.js" type="text/javascript"></script>
+<script>
+function getCity(){
+    let onSuccess = function(location){
+         if(console.log(localStorage.getItem('city'))==null)
+             {
+               document.getElementById('cityItem').innerText=localStorage.getItem('city');  
+             }
+      else {
+          document.getElementById('cityItem').innerText=location.city.names.ru;
+      }
+      
+    };
+    
+    let onError = function(error){
+       document.getElementById('cityItem').innerText='';
+    };
+     return geoip2.city(onSuccess, onError);
+    
+}
+</script>
 
 @if (Request.IsAuthenticated)
 {
@@ -10,6 +31,7 @@
 
         <ul class="nav navbar-nav navbar-right">
 
+            <li><a id ="cityItem" href="javascript:location.href='/Manage/ChangeCity?currentCity='+document.getElementById('cityItem').innerText"><script>getCity()</script></a></li>
             @if (User.IsInRole("admin"))
             {
                 <li>
@@ -32,6 +54,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
+        <li><a id ="cityItem" href="javascript:'/Manage/ChangeCity?currentCity='+document.getElementById('cityItem').innerText"><script>getCity()</script></a></li>
         <li>@Html.ActionLink("Регистрация", "Register", "Account", routeValues: null, htmlAttributes: new {id = "registerLink"})</li>
         <li>@Html.ActionLink("Выполнить вход", "Login", "Account", routeValues: null, htmlAttributes: new {id = "loginLink"})</li>
     </ul>
