--- a/Crunchers/Views/Admin/ManageShop.cshtml
+++ b/Crunchers/Views/Admin/ManageShop.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using Microsoft.AspNet.Identity
+
 <h1>Меню администратора</h1>
 <ul style="list-style-type:disc;">
     <li>@Html.ActionLink("Управление заказами","ManageOrders")</li>
