--- a/Crunchers/Views/Catalog/Index.cshtml
+++ b/Crunchers/Views/Catalog/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Crunchers.Models.CategoryModel>
+﻿@using Microsoft.AspNet.Identity
+@model IEnumerable<Crunchers.Models.CategoryModel>
 
 @foreach (var category in Model)
 {
