--- a/Crunchers/Views/Shared/_LoginPartial.cshtml
+++ b/Crunchers/Views/Shared/_LoginPartial.cshtml
@@ -3,22 +3,28 @@
 @using Microsoft.AspNet.Identity
 <script src="//js.maxmind.com/js/apis/geoip2/v2.1/geoip2.js" type="text/javascript"></script>
 <script>
-function getCity(){
-    let onSuccess = function(location){
-         if(console.log(localStorage.getItem('city'))==null)
-             {
-               document.getElementById('cityItem').innerText=localStorage.getItem('city');  
-             }
-      else {
-          document.getElementById('cityItem').innerText=location.city.names.ru;
-      }
-      
-    };
-    
-    let onError = function(error){
-       document.getElementById('cityItem').innerText='';
-    };
-     return geoip2.city(onSuccess, onError);
+function getCity(city){
+    if(city!=null)
+        {
+            localStorage.setItem('city',city);
+        }
+    if(localStorage.getItem('city')!=null)
+                 {
+                   document.getElementById('cityItem').innerText=localStorage.getItem('city');  
+                 }
+    else {
+         let onSuccess = function(location){
+                  document.getElementById('cityItem').innerText=location.city.names.ru;
+              
+              
+            };
+            
+            let onError = function(error){
+               document.getElementById('cityItem').innerText='';
+            };
+             return geoip2.city(onSuccess, onError);
+    }
+       
     
 }
 </script>
@@ -31,7 +37,7 @@ function getCity(){
 
         <ul class="nav navbar-nav navbar-right">
 
-            <li><a id ="cityItem" href="javascript:location.href='/Manage/ChangeCity?currentCity='+document.getElementById('cityItem').innerText"><script>getCity()</script></a></li>
+            <li><a id ="cityItem" href="javascript:location.href='/Manage/ChangeCity?currentCity='+document.getElementById('cityItem').innerText"><script>getCity('@(new CityModel().GetCityById(new UserModel().GetUser(User.Identity?.GetUserId())?.CityId)?.NameRu)')</script></a></li>
             @if (User.IsInRole("admin"))
             {
                 <li>
